do a stat with the neighboring zip areas

--- a/index.jade
+++ b/index.jade
@@ -81,7 +81,7 @@ html
                     td Cooking
                     td= row.Cause_CookingPCT
                 
-
+          p In zip codes within 15 miles of #{row.ZIP}, there were #{totalNearby} reported fires.
           
         form.pure-form
           | ZIP code to view: 
