--- a/index.jade
+++ b/index.jade
@@ -24,7 +24,7 @@ html
         border: 1px solid gray;
       }
       #map polygon {
-        stroke-width: 2px;
+        stroke-width: .002px;
         stroke: black;
         fill: red;
       }
