credits for me and map data

--- a/sidebar.jade
+++ b/sidebar.jade
@@ -2,7 +2,9 @@ ul
   li
     a(href='http://hackforchange.org/challenge/fire-data-visualization') Challenge description
   li
-    a(href='http://www.fema.gov/library/viewRecord.do?fromSearch=fromsearch&id=7443') Data used on this site
+    a(href='http://www.fema.gov/library/viewRecord.do?fromSearch=fromsearch&id=7443') FEMA fire data used on this site
+  li
+    a(href='http://www.mccurley.org/svg/') Zipcode boundary map data used on this site
 h3 References
 ul
   li
@@ -15,3 +17,9 @@ ul
     a(href='http://www.nfirs.fema.gov') NFIRS Website
   li
     a(href='http://www.usfa.fema.gov') USFA Website
+hr
+
+p
+  a(href='http://bigasterisk.com/') Drew Perttula
+  |  is the author of this viewer website. Email 
+  a(href='mailto:drewp@bigasterisk.com') drewp@bigasterisk.com
