--- a/style.jade
+++ b/style.jade
@@ -1,4 +1,11 @@
 style
+  h1 {
+    background: hsl(0, 0%, 25%);
+    color: hsl(0, 100%, 100%);
+    line-height: 2em;
+    margin: 0;
+    padding: .3em;
+  }
   .sidebar {
     background: rgb(245, 245, 245);
     font-size: 80%;
@@ -27,3 +34,12 @@ style
     fill: hsl(24, 81%, 68%);
   }
 
+  #map .labels {
+    pointer-events: none;
+  }
+  #map .labels text {
+    font-size: .025px;
+    text-anchor: middle;
+    text-shadow: 2px 2px 4px hsla(0, 0%, 0%, 0.34);
+    fill: hsla(0, 0%, 0%, 0.75);
+  }
