--- a/sidebar.jade
+++ b/sidebar.jade
@@ -21,5 +21,7 @@ hr
 
 p
   a(href='http://bigasterisk.com/') Drew Perttula
-  |  is the author of this viewer website. Email 
+  |  is the author of this viewer website. Code is on 
+  a(href='https://github.com/drewp/firedata') github.
+  | Email 
   a(href='mailto:drewp@bigasterisk.com') drewp@bigasterisk.com
