--- a/sidebar.jade
+++ b/sidebar.jade
@@ -22,6 +22,6 @@ hr
 p
   a(href='http://bigasterisk.com/') Drew Perttula
   |  is the author of this viewer website. Code is on 
-  a(href='https://github.com/drewp/firedata') github.
-  | Email 
+  a(href='https://github.com/drewp/firedata') github
+  | . Email 
   a(href='mailto:drewp@bigasterisk.com') drewp@bigasterisk.com
